workspace(
    name = "ic",
)

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("//bazel:mainnet-icos-images.bzl", "mainnet_icos_images")

http_archive(
    name = "rules_rust",
    integrity = "sha256-5Kgp+5cZcrJoTOUq9CF6KJdNsB2zNzvYM9UnYMoY5lc=",
    urls = ["https://github.com/bazelbuild/rules_rust/releases/download/0.66.0/rules_rust-0.66.0.tar.gz"],
)

load("@rules_rust//crate_universe:repositories.bzl", "crate_universe_dependencies")
load("@rules_rust//rust:repositories.bzl", "rules_rust_dependencies", "rust_register_toolchains")
load("@rules_rust//tools/rust_analyzer:deps.bzl", "rust_analyzer_dependencies")

rules_rust_dependencies()

rust_analyzer_dependencies()

crate_universe_dependencies()

rust_register_toolchains(
    edition = "2024",
    strip_level = {"x86_64-unknown-linux-gnu": {
        "dbg": "none",
        "fastbuild": "none",
        "opt": "none",
    }},
    versions = ["1.90.0"],
)

load("//bazel:external_crates.bzl", "external_crates_repository")

external_crates_repository(
    name = "crate_index",
    cargo_lockfile = "//:Cargo.Bazel.toml.lock",
    lockfile = "//:Cargo.Bazel.json.lock",
)

load("@crate_index//:defs.bzl", "crate_repositories")

crate_repositories()

# ormolu binary for haskell linting
load("//pre-commit:ormolu.bzl", "ormolu")

ormolu(name = "ormolu")

# Mainnet ICOS images
mainnet_icos_images(
    name = "mainnet_latest_hostos_images",
    parts = [
        "hostos",
        "latest_release",
    ],
    path = "//:mainnet-icos-revisions.json",
)

mainnet_icos_images(
    name = "mainnet_latest_hostos_images_dev",
    dev = True,
    parts = [
        "hostos",
        "latest_release",
    ],
    path = "//:mainnet-icos-revisions.json",
)

mainnet_icos_images(
    name = "mainnet_latest_guestos_images",
    parts = [
        "guestos",
        "latest_release",
    ],
    path = "//:mainnet-icos-revisions.json",
)

mainnet_icos_images(
    name = "mainnet_latest_guestos_images_dev",
    dev = True,
    parts = [
        "guestos",
        "latest_release",
    ],
    path = "//:mainnet-icos-revisions.json",
)

mainnet_icos_images(
    name = "mainnet_nns_images",
    parts = [
        "guestos",
        "subnets",
        "tdb26-jop6k-aogll-7ltgs-eruif-6kk7m-qpktf-gdiqx-mxtrf-vb5e6-eqe",
    ],
    path = "//:mainnet-icos-revisions.json",
)

mainnet_icos_images(
    name = "mainnet_nns_images_dev",
    dev = True,
    parts = [
        "guestos",
        "subnets",
        "tdb26-jop6k-aogll-7ltgs-eruif-6kk7m-qpktf-gdiqx-mxtrf-vb5e6-eqe",
    ],
    path = "//:mainnet-icos-revisions.json",
)

mainnet_icos_images(
    name = "mainnet_app_images",
    parts = [
        "guestos",
        "subnets",
        "io67a-2jmkw-zup3h-snbwi-g6a5n-rm5dn-b6png-lvdpl-nqnto-yih6l-gqe",
    ],
    path = "//:mainnet-icos-revisions.json",
)

mainnet_icos_images(
    name = "mainnet_app_images_dev",
    dev = True,
    parts = [
        "guestos",
        "subnets",
        "io67a-2jmkw-zup3h-snbwi-g6a5n-rm5dn-b6png-lvdpl-nqnto-yih6l-gqe",
    ],
    path = "//:mainnet-icos-revisions.json",
)
